@@ -1,5 +1,15 @@
 2020-04-28  Yusuke Suzuki  <ysuzuki@apple.com>
 
+        Unreviewed, build fix on watchOS
+        https://bugs.webkit.org/show_bug.cgi?id=210978
+
+        * runtime/JSBigInt.cpp:
+        (JSC::JSBigInt::createFrom):
+        (JSC::Int32BigIntImpl::digit):
+        * runtime/JSBigInt.h:
+
+2020-04-28  Yusuke Suzuki  <ysuzuki@apple.com>
+
         [JSC] BigInt constructor should accept larger integers than safe-integers
         https://bugs.webkit.org/show_bug.cgi?id=210755
 
